Monospace numbers, increased contrast for progress bar, increase time limit, input bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
 * {
   box-sizing: border-box;
   font-family: Inter;
+  font-variant-numeric: tabular-nums;
 }
 
 #timer {
@@ -54,8 +55,8 @@ header h1 {
 
 header #help-button {
   margin-left: auto;
-  width: clamp(48px, 4vw, 512px);
-  height: clamp(48px, 4vw, 512px);
+  width: clamp(48px, 3vw, 128px);
+  height: clamp(48px, 3vw, 128px);
   background: none;
   border: none;
   padding: none;
@@ -166,7 +167,7 @@ header #help-button img {
   background: transparent;
   font-family: Inter;
   font-weight: 700;
-  font-size: 22vw;
+  font-size: 20vw;
   text-align: left;
   outline: none;
 }
@@ -215,7 +216,7 @@ header #help-button img {
 #time-display {
   width: 100%;
   text-align: center;
-  font-size: 30vw;
+  font-size: clamp(16px, 30vw, 40vh);
   margin: 0;
   flex-grow: 1;
   flex-shrink: 1;
@@ -227,8 +228,9 @@ header #help-button img {
 
 #progress-bar {
   width: 100%;
-  height: 3vh;
+  height: 4vh;
   border-radius: 32px;
+  flex-shrink: 0;
   background: var(--darkgrey);
   overflow: hidden;
 }
@@ -246,8 +248,8 @@ header #help-button img {
 
 #back-button,
 #play-pause-button {
-  height: clamp(96px, 12vw, 192px);
-  width: clamp(96px, 12vw, 192px);
+  height: clamp(80px, 8vw, 256px);
+  width: clamp(80px, 8vw, 256px);
   border-radius: 50%;
   display: flex;
   justify-content: center;
